--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -32,10 +32,18 @@
             android:id="@+id/floating_search_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:floatingSearch_showVoiceInput="true"
+            app:floatingSearch_searchBarWidth="350dp"
             app:floatingSearch_searchBarMarginLeft="@dimen/search_view_inset"
             app:floatingSearch_searchBarMarginTop="@dimen/search_view_inset"
             app:floatingSearch_searchBarMarginRight="@dimen/search_view_inset"
+            app:floatingSearch_showMenuAction="true"
+            app:floatingSearch_searchHint="Search..."
+            app:floatingSearch_voiceRecHint="Say something..."
+            app:floatingSearch_showSearchHintWhenNotFocused="true"
+            app:floatingSearch_showVoiceInput="true"
+            app:floatingSearch_showOverFlowMenu="true"
+            app:floatingSearch_hideOverflowMenuWhenFocused="true"
+            app:floatingSearch_showSearchKey="false"
             app:floatingSearch_dismissOnOutsideTouch="true"
             app:floatingSearch_menu="@menu/menu_main"/>
 
