--- a/sample/src/main/res/menu/menu_main.xml
+++ b/sample/src/main/res/menu/menu_main.xml
@@ -1,23 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_show_menu"
-        android:title="@string/action_show_menu_mode"
+    <item android:id="@+id/action_voice_rec"
+        android:title="@string/action_voice_rec"
         android:orderInCategory="1"
         app:showAsAction="always"
         android:icon="@drawable/ic_keyboard_voice_black_24dp"/>
-    <item android:id="@+id/action_show_search"
-        android:title="@string/action_show_search_mode"
+    <item android:id="@+id/action_location"
+        android:title="@string/action_location"
         android:orderInCategory="2"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_my_location_black_24dp"/>
-    <item android:id="@+id/action_show_home"
-        android:title="@string/action_show_home_mode"
+    <item android:id="@+id/action_taxi"
+        android:title="@string/action_taxi"
         android:orderInCategory="3"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_local_taxi_black_24dp"/>
-    <item android:id="@+id/action_show_nothing"
-        android:title="@string/action_show_nothing_mode"
+    <item android:id="@+id/action_restaurant"
+        android:title="@string/action_restaurant"
         android:orderInCategory="4"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_restaurant_menu_black_24dp"/>
