refactored focus state  anim

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
             app:floatingSearch_showSearchHintWhenNotFocused="true"
             app:floatingSearch_showSearchKey="false"
             app:floatingSearch_dismissOnOutsideTouch="true"
-            app:floatingSearch_leftAction="showNothing"
+            app:floatingSearch_leftAction="showHamburger"
             app:floatingSearch_menu="@menu/menu_main"
             app:floatingSearch_searchSuggestionTextSize="18sp"/>
 
