--- a/sample/src/main/res/menu/menu_main.xml
+++ b/sample/src/main/res/menu/menu_main.xml
@@ -9,7 +9,7 @@
     <item android:id="@+id/action_location"
         android:title="@string/action_location"
         android:orderInCategory="2"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:icon="@drawable/ic_my_location_black_24dp"/>
     <item android:id="@+id/action_taxi"
         android:title="@string/action_taxi"
