prepare menu resource for release

--- a/sample/src/main/res/menu/menu_main.xml
+++ b/sample/src/main/res/menu/menu_main.xml
@@ -4,21 +4,21 @@
     <item android:id="@+id/action_voice_rec"
         android:title="@string/action_voice_rec"
         android:orderInCategory="1"
-        app:showAsAction="never"
+        app:showAsAction="always"
         android:icon="@drawable/ic_keyboard_voice_black_24dp"/>
     <item android:id="@+id/action_location"
         android:title="@string/action_location"
         android:orderInCategory="2"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_my_location_black_24dp"/>
     <item android:id="@+id/action_taxi"
         android:title="@string/action_taxi"
         android:orderInCategory="3"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_local_taxi_black_24dp"/>
     <item android:id="@+id/action_restaurant"
         android:title="@string/action_restaurant"
         android:orderInCategory="4"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_restaurant_menu_black_24dp"/>
 </menu>
