add background to gif

--- a/sample/src/main/res/layout/activity_main_main_content.xml
+++ b/sample/src/main/res/layout/activity_main_main_content.xml
@@ -36,6 +36,6 @@
             app:floatingSearch_searchBarMarginTop="@dimen/search_view_inset"
             app:floatingSearch_searchHint="Search..."
             app:floatingSearch_showSearchKey="true"
-            app:floatingSearch_dimBackground="false"/>
+            app:floatingSearch_dimBackground="true"/>
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
