--- a/sample/src/main/res/layout/activity_main_main_content.xml
+++ b/sample/src/main/res/layout/activity_main_main_content.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#d9d9d9">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
