add attribute for setting expand/collapse aim duration

--- a/sample/src/main/res/layout/activity_main_main_content.xml
+++ b/sample/src/main/res/layout/activity_main_main_content.xml
@@ -36,6 +36,7 @@
             app:floatingSearch_searchBarMarginTop="@dimen/search_view_inset"
             app:floatingSearch_searchHint="Search..."
             app:floatingSearch_showSearchKey="true"
+            app:floatingSearch_suggestionsListAnimDuration="250"
             app:floatingSearch_dimBackground="false"/>
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
