--- a/sample/src/main/res/layout/activity_main_main_content.xml
+++ b/sample/src/main/res/layout/activity_main_main_content.xml
@@ -37,6 +37,7 @@
             app:floatingSearch_searchHint="Search..."
             app:floatingSearch_showSearchKey="true"
             app:floatingSearch_suggestionsListAnimDuration="250"
-            app:floatingSearch_dimBackground="false"/>
+            app:floatingSearch_dimBackground="false"
+            app:floatingSearch_close_search_on_keyboard_dismiss="true"/>
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
