Made the text size of the Search Bar configurable via the XML

--- a/sample/src/main/res/layout/fragment_sliding_search_results_example_fragment.xml
+++ b/sample/src/main/res/layout/fragment_sliding_search_results_example_fragment.xml
@@ -38,6 +38,7 @@
             app:floatingSearch_showSearchKey="true"
             app:floatingSearch_suggestionsListAnimDuration="250"
             app:floatingSearch_dimBackground="false"
-            app:floatingSearch_close_search_on_keyboard_dismiss="false"/>
+            app:floatingSearch_close_search_on_keyboard_dismiss="false"
+            app:floatingSearch_searchBarTextSize="16sp"/>
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
